# rusty-search

./: Cargo.toml  LICENSE  README.md  sample.env
src/: main.rs
tests/: cli.rs
