[package]
name = "rusty-search"
version = "0.1.0"
edition = "2021"
authors = ["Reljod Oreta"]
description = "This is a basic command-line interface (CLI) application developed in Rust that enables users to conduct web searches."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
dotenv = "0.15.0"
hyper-tls = "0.5.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.70"