[package]
name = "rusty-search"
version = "0.1.0"
edition = "2021"
authors = ["Reljod Oreta <oretareljod@gmail.com>"]
license = "Apache-2.0"
description = "A command-line interface (CLI) application developed in Rust that enables users to conduct web searches."
readme = "README.md"
homepage = "https://github.com/Reljod/rusty-search"
repository = "https://github.com/Reljod/rusty-search"
keywords = ["search", "cli", "rust", "rusty-search", "reljod"]
categories = ["command-line-utilities"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
dotenv = "0.15.0"
hyper-tls = "0.5.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.70"

[dev-dependencies]
assert_cmd = "2.0.10"
predicates = "3.0.1"